--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
     "globalTeardown": "./jest-teardown.js"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "babel": "^6.23.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
+    "framer-motion": "^2.9.4",
     "npm": "^6.14.8",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "supertest": "^6.0.1"
   },
