--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/styled": "^11.0.0",
     "babel": "^6.23.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
