--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "flash": "^1.1.0",
     "framer-motion": "^2.9.4",
     "npm": "^6.14.8",
     "path": "^0.12.7",
