--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
     "enzyme-to-json": "^3.6.1",
+    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "sass": "^1.29.0",
